--- a/MDK-ARM/gleaming_joy/gleaming_joy.htm
+++ b/MDK-ARM/gleaming_joy/gleaming_joy.htm
@@ -3,7 +3,7 @@
 <title>Static Call Graph - [gleaming_joy\gleaming_joy.axf]</title></head>
 <body><HR>
 <H1>Static Call Graph for image gleaming_joy\gleaming_joy.axf</H1><HR>
-<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060750: Last Updated: Mon Aug 28 14:26:50 2023
+<BR><P>#&#060CALLGRAPH&#062# ARM Linker, 5060750: Last Updated: Mon Aug 28 16:08:59 2023
 <BR><P>
 <H3>Maximum Stack Usage =        788 bytes + Unknown(Functions without stacksize, Cycles, Untraceable Function Pointers)</H3><H3>
 Call chain for Maximum Stack Depth:</H3>
@@ -872,7 +872,7 @@ Global Symbols
 <P><STRONG><a name="[e]"></a>HardFault_Handler</STRONG> (Thumb, 4 bytes, Stack size 0 bytes, stm32f4xx_it.o(i.HardFault_Handler))
 <BR>[Address Reference Count : 1]<UL><LI> startup_stm32f407xx.o(RESET)
 </UL>
-<P><STRONG><a name="[a9]"></a>MX_GPIO_Init</STRONG> (Thumb, 432 bytes, Stack size 32 bytes, gpio.o(i.MX_GPIO_Init))
+<P><STRONG><a name="[a9]"></a>MX_GPIO_Init</STRONG> (Thumb, 640 bytes, Stack size 32 bytes, gpio.o(i.MX_GPIO_Init))
 <BR><BR>[Stack]<UL><LI>Max Depth = 56<LI>Call Chain = MX_GPIO_Init &rArr; HAL_GPIO_Init
 </UL>
 <BR>[Calls]<UL><LI><a href="#[aa]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;HAL_GPIO_WritePin
@@ -1056,10 +1056,10 @@ Global Symbols
 <P><STRONG><a name="[b9]"></a>Class_Chassis::Calculate_TIM_PeriodElapsedCallback()</STRONG> (Thumb, 412 bytes, Stack size 24 bytes, chassis.o(i._ZN13Class_Chassis35Calculate_TIM_PeriodElapsedCallbackEv))
 <BR><BR>[Stack]<UL><LI>Max Depth = 64<LI>Call Chain = Class_Chassis::Calculate_TIM_PeriodElapsedCallback() &rArr; Class_Motor_With_Hall_Encoder::Calculate_TIM_PeriodElapsedCallback() &rArr; Class_PID::Adjust_TIM_PeriodElapsedCallback()
 </UL>
-<BR>[Calls]<UL><LI><a href="#[ba]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;void Math_Constrain&lang;float&rang;(T1*, T1, T1)
-<LI><a href="#[bd]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Class_Motor_With_Hall_Encoder::Calculate_TIM_PeriodElapsedCallback()
+<BR>[Calls]<UL><LI><a href="#[bd]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Class_Motor_With_Hall_Encoder::Calculate_TIM_PeriodElapsedCallback()
 <LI><a href="#[bc]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Class_Motor_With_Hall_Encoder::Set_Omega_Target(float)
 <LI><a href="#[bb]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Class_Motor::Get_Rotate_Direction_Flag()
+<LI><a href="#[ba]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;void Math_Constrain&lang;float&rang;(T1*, T1, T1)
 </UL>
 <BR>[Called By]<UL><LI><a href="#[79]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;main
 </UL>
@@ -1151,7 +1151,7 @@ Global Symbols
 <BR>[Called By]<UL><LI><a href="#[6a]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;__sti___6_main_c_Chassis
 </UL>
 
-<P><STRONG><a name="[79]"></a>main</STRONG> (Thumb, 592 bytes, Stack size 360 bytes, main.o(i.main))
+<P><STRONG><a name="[79]"></a>main</STRONG> (Thumb, 784 bytes, Stack size 360 bytes, main.o(i.main))
 <BR><BR>[Stack]<UL><LI>Max Depth = 788<LI>Call Chain = main &rArr; Class_Chassis::Init(TIM_HandleTypeDef, TIM_HandleTypeDef) &rArr; Class_Motor_With_Hall_Encoder::Init(TIM_HandleTypeDef, unsigned char, unsigned short, GPIO_TypeDef*, unsigned short, GPIO_TypeDef*, TIM_HandleTypeDef, unsigned short, GPIO_TypeDef*, unsigned short, GPIO_TypeDef*) &rArr; HAL_TIM_PWM_Start &rArr; TIM_CCxChannelCmd
 </UL>
 <BR>[Calls]<UL><LI><a href="#[be]">&gt;&gt;</a>&nbsp;&nbsp;&nbsp;Class_Chassis::Init(TIM_HandleTypeDef, TIM_HandleTypeDef)
